# daily-diet-python-api

./: README.md  compose.yml  pyproject.toml
src/api/: __init__.py  database.py  env.py  migrate.py
src/api/controllers/: meal_controller.py  user_controller.py
src/api/models/: meal.py  user.py
tests/: conftest.py  test_hello.py
