[project]
name = "daily-diet-python-api"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "Tamicktom", email = "rickpokemon38@gmail.com" }]
dependencies = [
    "requests>=2.32.5",
    "pytest>=9.0.2",
    "flask>=3.1.2",
    "Flask-SQLAlchemy>=3.1.1",
    "Flask-Login>=0.6.3",
    "Werkzeug>=3.1.5",
    "pytest-flask>=1.3.0",
    "pymysql>=1.1.2",
    "cryptography>=46.0.4",
    "bcrypt>=5.0.0",
    "pytest-watcher>=0.6.3",
    "python-dotenv>=1.2.1",
]
requires-python = "==3.12.*"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm.scripts]
dev = "python3 -c \"import sys; sys.path.insert(0, 'src'); from api import app; app.run(debug=True)\""
migrate = "python3 src/api/migrate.py"
test = "pytest"
test-watch = "ptw ."

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.pdm]
distribution = false
